# crystal-rl

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
aws/: braket_details.py  braket_inventory.py  braket_missing.py  braket_search_all.py  check_bootstrap.py  user-data-bootstrap.sh
configs/: default.yaml
data/validation/: unusual_topology.json  validation_report.json
envs/: __init__.py  crystal_env.py
models/: __init__.py  surrogate.py
qe_interface/: __init__.py  calculator.py  properties.py  structures.py
scripts/: analyze_jarvis.py  bootstrap_expanded.py  bootstrap_full.py  bootstrap_small.py  check_aflow_schema.py  debug_bands.py  debug_effmass.py  diag_dft.py  download_mp.py  download_pseudos.py  retrain_full.py  retrain_jarvis.py  retrain_multitask.py  test_integration.py  test_silicon.py  train.py  train_medium.py  train_ppo_jarvis.py  train_short.py  validate_dft.py  verify_fp.py
